2003-04-07  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:for:>}}): Added
	documentation for using tuples in the <:for:> tag's "name"
	parameter (and learned how to type a literal quotation mark in
	latex-mode!) 

	* pylibs/DT/DTTags.py (ImportTag.genCode): Permit items being
	imported to be separated by commas as well as spaces: 
	<:import os "getlogin, getuid":> now works.

2003-04-04  Jacob Smullyan  <smulloni@smullyan.org>

	* Makefile.in, pylibs/Makefile.in, SkunkWeb/Makefile.in,
	SkunkWeb/Services/Makefile.in: added DESTDIR in the numerous
	places it wasn't being used in make install targets (to facilitate
	making rpms, ebuilds).

2003-04-03  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in: added comments about usertracking.

	* README: moved stuff about pickling errors to FAQ.

	* HACKING: added some package descriptions.

	* FAQ: reconciled conflicts, added an entry and did some editing.

2003-04-03    <drew@loki.sai-office>

	* pylibs/AE/Cache.py: added runOutOfCache and dontCacheSource
	options

	* docs/opman/opman.tex: added doc for runOutOfCache and 
	dontCacheSource

	* ACKS: added Hy Ginsberg

2003-04-02  Jacob Smullyan  <smulloni@smullbola.smullyan.org>

	* pylibs/PostgreSql/__init__.py (SimpleQueryTest): added
	connection_test capability to verify connections (useful
	if the database is being accessed remotely and connections
	are liable to intermittently going south).

	* SkunkWeb/SkunkWeb/Server.py (start): removing "server starting"
	message that I don't want to see any more. 
	
2003-04-02  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/swpython.py.in (usage): added "-q", "--quiet" options
	to suppress the "Initializing..." message that I'm tired of
	seeing.

	* SkunkWeb/swmgr.in: You can now stop or restart the daemon
	without running swpython if you pass swmgr the "-f" option (and if
	your pid file is in the configured default, which is likely); also
	improved usage text a tad.