@@ -22,6 +22,10 @@ from views import *
 from validates import *
 from state import *
 from dispatcher import *
+try:
+    from aecomp import *
+except ImportError:
+    pass
 
 
 
